# models/user.go
@@ -1,11 +1,11 @@
 package models
 
 type User struct {
-	UserId        int64  `gorm:"column:Id;type:int"json:"user_id,omitempty"`
-	UserName      string `gorm:"column:username;type:varchar(20)"json:"username"`
-	Password      string `gorm:"column:password;type:varchar(50)"json:"password"`
-	FollowCount   int64  `json:"follow_count,omitempty"`
-	FollowerCount int64  `json:"follower_count,omitempty"`
+	UserId        int64  `gorm:"column:user_id;type:int"json:"user_id,omitempty"`
+	UserName      string `gorm:"column:username;type:varchar(32)"json:"username"`
+	Password      string `gorm:"column:password;type:varchar(32)"json:"password"`
+	FansCount     int64  `gorm:"column:fans;type:int"json:"fans,omitempty"`
+	FollowerCount int64  `gorm:"column:followee;type:int"json:"followee,omitempty"`
 }
 
 type UserLoginResponse struct {
@@ -16,5 +16,5 @@ type UserLoginResponse struct {
 
 // TableName 返回数据库 表名称
 func (table *User) TableName() string {
-	return "user"
+	return "tb_user"
 }
